The version of the night before the deadline

--- a/appendices/ethical_table.tex
+++ b/appendices/ethical_table.tex
@@ -7,8 +7,8 @@
     \cellcolor[HTML]{C0C0C0} Section 1: HUMANS &  & \  \\ \hline
     Does your project involve human participants? &  & x \\ \hline
     \cellcolor[HTML]{C0C0C0} Section 2: PROTECTION OF PERSONAL DATA &  & \  \\ \hline
-    Does your project involve personal data collection and/or processing? & x &  \\ \hline
-    Does it involve the collection and/or processing of sensitive personal data (e.g. health, sexual lifestyle, ethnicity, political opinion, religious or philosophical conviction)? & x &  \\ \hline
+    Does your project involve personal data collection and/or processing? & & x \\ \hline
+    Does it involve the collection and/or processing of sensitive personal data (e.g. health, sexual lifestyle, ethnicity, political opinion, religious or philosophical conviction)? & & x \\ \hline
     Does it involve processing of genetic information? & & x  \\ \hline
     Does it involve tracking or observation of participants? It should be noted that this issue is not limited to surveillance or localization data. It also applies to Wan data such as IP address, MACs, cookies etc. & & x  \\ \hline
     Does your project involve further processing of previously collected personal data (secondary use)? For example Does your project involve merging existing data sets? & x &  \\ \hline
