--- a/background/background.tex
+++ b/background/background.tex
@@ -1,5 +1,5 @@
 This project covers an exciting area of Computer Science with Machine Learning and Federated Learning.
-I will be covering each in turn and also giving a more detailed analyses where it is deemed relevant to the project.
+This chapter will be discussing each in turn and also giving a more detailed analyses where it is deemed relevant to the project.
 This project makes the following assumptions:
 
 \begin{enumerate}
