--- a/ethical.tex
+++ b/ethical.tex
@@ -1,9 +1,14 @@
-There are four points in the ethical consideration table [\ref{tbl:ethical-table}] that I need to cover:
+There are three points in the ethical consideration table [\ref{tbl:ethical-table}] that might be necessary to cover:
 \begin{itemize}
     \item Personal data processing
     \item Sensitive personal data processing
     \item Previously collected personal data processing
 \end{itemize}
-Every one of these points is due to the inclusion of medical datasets that are used to train Machine Learning models to test the Federated Learning techniques discussed in this paper.\\ \\
-These are in the form of the \href{https://medmnist.github.io/}{MedMNIST} datasets that are publicly available for anyone to use. For this data we do not have any identifiable information about any of the images and so even though this is sensitive personal medical data, it can't be traced back to the owner.\\ \\
-This then doesn't leave me with any ethical considerations as I don't need to worry about storing, sending, processing or any form of handling of this data as it is a public dataset with nothing that ends up being sensitive or personal. The participants involvement in the original data collection are then no longer relevant in the use of the data by other individuals and so no longer need to be considered.
+Every one of these points is due to the inclusion of datasets that are used to train Machine Learning models to test the Federated Learning techniques discussed in this paper.\\ \\
+These are in the form of the MNIST dataset that is publicly available for anyone to use. 
+For this data we do not have any identifiable information about any of the images and so it isn't personal in any way.
+\\ \\
+This then doesn't leave me with any ethical considerations as I don't need to worry about storing, sending, processing or any form of handling of this data as it is a public dataset with nothing that ends up being sensitive or personal. 
+The participants involvement in the original data collection are then no longer relevant in the use of the data by other individuals and so no longer need to be considered.
+\\ \\
+However, I do just note them down as potential points of consideration for future work that might be undertaken with the work that I have contributed in this project.
