--- a/main.tex
+++ b/main.tex
@@ -37,14 +37,15 @@ However, the lack of knowledge by the overarching system of what data an individ
 So, ensuring that the aggregation strategy is robust, is of paramount importance.
 Unfortunately, current methods of robust aggregation lack full understanding of this space and so aren't able to fully protect the users from all of the variety of attacks present.
 \\ \\
-This paper will cover various forms of robust aggregation, as well as some more simple methods to enhance current existing approaches.
+This paper will cover various forms of robust aggregation and attacks, as well as some more simple methods to enhance current existing approaches.
 It will also introduce a solution to fully enhancing robust aggregation (from more attack vectors) called FedPADRC, which uses clustering and other techniques to enhance the robust aggregation process.
 \end{abstract}
 
 \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Acknowledgements}
-I would like to thank Amir Alansary for helping and guiding me through this project, as well as giving me a reading group to discuss and learn more about Federated Learning.
+I would like to thank Dr Amir Alansary [\ref{amir}] for helping and guiding me through this project, as well as giving me a reading group to discuss and learn more about Federated Learning. 
+Thank you also to Dr Jonathan Passerat-Palmbach [\ref{jon}] for also hosting this reading group.
 \\ \\
 The notes, slides and general lecture material/teaching from modules such as Privacy Engineering and Introduction to Machine Learning have proved to be invaluable in my general understanding of Machine Learning and Privacy Preserving techniques. So, I would like to thank the relevant lecturers for this.
 \\ \\
@@ -88,10 +89,11 @@ Finally, I would like to thank my girlfriend for putting up with me and the lack
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter[FedPADRC]{Personalised \& Adaptive Dimension Reducing Clustering Aggregation}
+\label{chap:fedpadrc}
 \input{my_agg/mine}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Conclusion}
+\chapter{Conclusion and Future Work}
 \input{conclusion}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
