--- a/intro.tex
+++ b/intro.tex
@@ -1,3 +1,5 @@
+All work done is contained within my GitHub repository \href{https://github.com/SamuelTrew/FederatedLearning}{here} with all of the results from all of the experiments/investigations performed found \href{https://github.com/SamuelTrew/FYP_Results}{here}.
+
 \section{Motivation}
 The use of Machine Learning (ML) to enhance user experiences, to provide fantastic tools, or to be able to make accurate predictions all require large amounts of data --- this is normally collected by a single body/organisation.
 This has its limitations; there are cases where not enough data can be collected by any one group of people. 
@@ -26,19 +28,45 @@ Investigating, enhancing and creating a robust aggregator to be able to handle a
 
 \section{Objectives}
 The main focus of this project is to implement and evaluate robust aggregation methods for FL.
-In our work, we will be using well-known datasets such as MNIST, that are good for covering the variety of attacks we are considering.
-However, other forms of ML (e.g. LSTMs) might be susceptible to different types of attacks and it should be noted that these won't be covered.
+In our work, we use well-known datasets such as MNIST, that are good for covering the variety of attacks we are considering.
+However, other forms of ML (e.g. LSTMs) might be susceptible to different types of attacks and it should be noted that these is not covered.
 \\ \\
-The initial experiments will be done using MNIST \cite{mnist} digit classification, as it serves a good baseline for initial investigation.  This is to gauge the performance of the robust aggregation algorithms when applied to such common datasets.
-Then, we will conduct an evaluation of the different strategies, and determine the driving characteristics behind their performance. This will provide insight into what helps tackle the issues faced by FL.
+The initial experiments are using MNIST \cite{mnist} digit classification, as it serves a good baseline for initial investigation.  This is to gauge the performance of the robust aggregation algorithms when applied to such common datasets.
+Then, we conduct an evaluation of the different strategies, and determine the driving characteristics behind their performance. This will provide insight into what helps tackle the issues faced by FL.
 \\ \\
-We will then lead into creating our own robust aggregation strategy, one that is more capable of handling a large variety and combinations of attacks in a robust manner.
+We then lead into creating our own robust aggregation strategy, one that is more capable of handling a large variety and combinations of attacks in a robust manner.
 The aim would be to end up with a State of the Art (SotA) algorithm that outperforms the other solutions.
 \\ \\
 In the future, we would like to be able to do some further investigation into the medical realm. This is to evaluate the performance of our aggregator on a real-world dataset.
 This might be harder to achieve in practice due to the sensitive nature of the data. A competition dataset that is publicly available might prove to be the better option.
 
-
+\section{Contributions}
+\begin{enumerate}
+    \item \textbf{Improved FedMGDA+:} 
+    This project enhances upon an aggregator called FedMGDA+ in a variety of ways.
+    It increases the global model's accuracy under this aggregation such that the final results is also more deterministic.
+    The smoothness of aggregation and the increase in speed of convergence also gets enhanced to result in a more robust algorithm.
+    Finally, the accuracy and capability of the blocking is far better now, blocking most (if not all) of the malicious clients while pretty much never blocking benign clients.
+    
+    \item \textbf{Highlighting Limitations of Aggregators:}
+    Current robust aggregators aren't able to defend against free-riding clients, with certain ones (e.g. FedMGDA+) performing extra poorly on aggregation.
+    This project also explains why and how they fail and explains that it could be due to a lack of understanding of the space.
+    
+    \item \textbf{Enhancing Aggregation through Clustering:}
+    This project introduces a novel solution to enhance current robust aggregation methods (e.g. COMED) through the use of K-Means Clustering.
+    This increases COMED's ability to block clients from aggregating with less than ideal accuracy with 15 malicious (out of a total of 30 clients) clients, all the way up to smoothly aggregating against 22 malicious with a much better accuracy.
+    
+    \item \textbf{Creating my own Robust Aggregator:}
+    Created a robust aggregator that outperforms all other popular robust aggregators.
+    Uses a combination of clustering, dimension reduction, personalisation and adaptiveness to create a robust algorithm for blocking up to 26 malicious / free-riding clients (out of a total of 30 clients).
+    It does this to the extent where the error rate is similar to that of FedAvg without any malicious clients at all.
+    It is also the only aggregation method that currently does not allow any free-riders access to a good model and as such, the only system to not allow any information theft against free-riders (thereby ensuring they have a useless model).
+    
+    \item \textbf{Future Work:}
+    This project includes some short, yet thorough, ideas and concepts that could be used to further the work done in this project.
+    Some of the content is specific to the work done here with FedPADRC and other content is just ideas and postulations that I had throughout the course of completing this project but weren't able to incorporate.
+        
+\end{enumerate}
 
 
 \section{Challenges}
@@ -60,3 +88,4 @@ This might be harder to achieve in practice due to the sensitive nature of the d
     Increasing the number of users that we test with or having a more complex Deep Learning network all contributes to this.
     Having a more powerful system at my disposal would help make it more feasible to get more done in this time-frame.
 \end{enumerate}
+
